feat: Complete React UI with Discovery Engine, Smart Upload, and Schema Export (#7)
## Summary

This PR delivers a **complete, production-ready React UI** for the
Ceremony Field Catalog, along with significant backend enhancements and
CI/CD improvements. It transforms the catalog from an API-only tool into
a full-stack application with powerful search, discovery, and bulk
ingestion capabilities.

### 🎨 Complete React UI Implementation

Built with a bold, minimalist "Ink & Steel" design system:
- **Discovery Engine** (`/`) - Real-time, instant search feed with
debounced input
- **Field Search** (`/search`) - Advanced search with faceted filtering
and autocomplete
- **Context Management** (`/contexts`) - Full CRUD with extraction rule
configuration
- **Smart Upload** (`/upload`) - Intelligent bulk ingestion with
automatic metadata extraction

### 🔍 Discovery & Search Features

| Feature | Description |
|---------|-------------|
| **Instant Results Feed** | Debounced search with live results as you
type |
| **Autocomplete Suggestions** | Prefix-based suggestions for fieldPath,
context, and metadata |
| **Faceted Filtering** | Client-side multi-select filters with
disjunctive counting |
| **Regex Support** | Toggle between literal and regex pattern matching
|
| **Field Detail Panel** | Slide-in panel with full field statistics and
warnings |

### 📤 Smart Upload Workflow

Three-stage bulk ingestion pipeline:
1. **Select Context** - Loads configured extraction rules
2. **Scan Files** - Client-side XML parsing with automatic metadata
extraction
3. **Review Bins** - Files grouped by extracted metadata signature for
batch submission

### 📊 Schema Export

Export observed schemas with configurable policies:
- **XSD 1.1** - Hierarchical with `xs:all` for order flexibility
- **JSON Schema** - Draft 2020-12 compliant
- **CSV** - Flat export for spreadsheet analysis
- **Policy Options** - Permissive/Strict/Strictest container cardinality

### ⚠️ Field-Level Warnings

Automatic det